# backend-i

./: README.md
.devcontainer/: devcontainer.json
Project/: .dockerignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
Project/course/: admin.py  models.py  urls.py  views.py
Project/course/templates/: base.html
Project/learning_hub/: settings.py  urls.py
Project_Hub/: .dockerignore  .gitignore  2025-03-30 18:58:06.540244_list_course.json  Dockerfile  Makefile  README.md  compose.yaml  data.json  db.sqlite3  db.sqlite3.backup  manage.py  pyproject.toml  user.json
Project_Hub/cli/: cli.py
Project_Hub/learning_hub/: settings.py  urls.py
Project_Hub/my_course/: admin.py  apps.py  cli.py  forms.py  models.py  urls.py  views.py
Project_Hub/my_course/static/css/: style.css
Project_Hub/my_course/templates/: base.html
Project_Hub/my_course/templates/my_course/: course_list.html  delete_confirmation.html  enroll_confirmation.html  index.html  mentor_enrolled_courses.html  student_enrolled_courses.html  update_confirmation.html
Project_Hub/my_course/templates/registration/: login.html  signup.html
Project_Hub/my_course/tests/: test_views.py
Session_1/: pyproject.toml
Session_1/src/session_1/: calculator.py  main.py
Session_10/: pyproject.toml
Session_10/src/session_10/: http_server.py
Session_10/tests/: test_http_server.py
Session_11/: Dockerfile  compose.yaml  pyproject.toml
Session_11/src/session_11/: main.py
Session_11/tests/: test_main.py
Session_12/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
Session_12/src/session_12/: database.py  main.py  models.py  services.py
Session_12/tests/: test_api.py
Session_12_13/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
Session_12_13/src/session_12/: database.py  main.py  models.py  (+1 more)
Session_12_13/tests/: test_api.py
Session_14/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
Session_14/djproject/: settings.py
Session_14/todo/: admin.py  forms.py  models.py  urls.py  views.py
Session_14_17/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
Session_14_17/djproject/: asgi.py  settings.py  urls.py  wsgi.py
Session_14_17/todo/: admin.py  forms.py  models.py  urls.py  views.py
Session_2/: pyproject.toml
Session_3/: pyproject.toml
Session_3/src/session_3/: register.py  store.py  tutorial.py
Session_4/: hello.txt  pyproject.toml
Session_4/src/session_4/: iterators.py  reader.py
Session_5/: pyproject.toml
Session_6/: pyproject.toml
Session_6/tests/: test_fixtures.py  test_sample.py
Session_7/: example.db  my_database.db  pyproject.toml
Session_8/: pyproject.toml
Session_8/src/session_8/: cli.py
Session_8/tests/: test_cli.py
Session_9/: compose.yaml  pyproject.toml
Session_9/src/session_9/: bot.py  cli.py
http_socket_test_example/: pyproject.toml
http_socket_test_example/tests/: main_test.py
ollama_discord_bot_example/: .dockerignore  .gitignore  Makefile  compose.yaml  dockerfile  pyproject.toml
(+32 files in other folders)
