[project]
name = "session-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Huniity",email = "adrien.dejonc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "session_10", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
