[project]
name = "session-8"
version = "0.1.0"
description = ""
authors = [
    {name = "Huniity",email = "adrien.dejonc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.2,<0.16.0)"
]

[project.scripts]
cli = "session_8.cli:app"

[tool.poetry]
packages = [{include = "session_8", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
